<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:sciman="http://schemas.android.com/apk/res-auto">
        
     <PreferenceCategory
        android:key="catGeneral"
        android:title="@string/pref_general">
        
        <PreferenceScreen android:key="prefscreen_folder"
            android:title="@string/pref_screen_folder"
            android:summary="@string/pref_screen_folder_sum">
                         <intent android:action="EditFolderPreferences"/>
        </PreferenceScreen>
         
        <ListPreference 
            android:entries="@array/pref_language_entries" 
            android:title="@string/pref_language" 
            android:key="pref_language" 
            android:entryValues="@array/pref_language_values" 
            android:summary="@string/pref_language_sum" 
            />
        <CheckBoxPreference
            android:id="@+id/isHideSystemappsEnabled"
            android:key="isHideSystemappsEnabled"
            android:title="@string/pref_systemapps"
            android:summary="@string/pref_systemapps_sum"
            android:defaultValue="true"/>
     </PreferenceCategory>
        
    <PreferenceCategory
        android:key="catGraphics"
        android:title="@string/pref_graphics">
        <CheckBoxPreference
            android:id="@+id/isSplashEnabled"
            android:key="isSplashEnabled"
            android:title="@string/pref_splash"
            android:summary="@string/pref_splash_sum"
            android:defaultValue="true"/>
        
        <CheckBoxPreference
            android:id="@+id/isPictsEnabled"
            android:key="isPictsEnabled"
            android:title="@string/pref_backpic"
            android:summary="@string/pref_backpic_sum"
            android:defaultValue="true"/>
        <ListPreference 
            android:entries="@array/pref_color_theme_entries" 
            android:title="@string/pref_colortheme" 
            android:key="pref_color_theme_entries" 
            android:entryValues="@array/pref_color_theme_values" 
            android:summary="@string/pref_colortheme_sum" 
            android:defaultValue="Black" />

    </PreferenceCategory>
    
   <PreferenceCategory
        android:key="catTabs"
        android:title="@string/pref_tabs">
        <PreferenceScreen android:key="prefscreen_bib"
            android:title="@string/pref_screen_bib"
            android:summary="@string/pref_screen_bib_sum">
            
             <PreferenceCategory
        android:key="catBibview"
        android:title="@string/pref_bibview">
        <CheckBoxPreference
            android:id="@+id/isAutotextsizeEnabled"
            android:key="isAutotextsizeEnabled"
            android:title="@string/pref_textsize"
            android:summary="@string/pref_textsize_sum"
            android:defaultValue="true"/>
		<de.badgersburrow.sciman.SlidebarPreference
		    android:id="@+id/prefTextSize"
	        android:key="prefTextSize"
	        android:title="@string/pref_textsizeman"
	        android:summary="@string/pref_textsizeman_sum"
	        android:dialogMessage="@string/pref_textsizeman_sum"
	        android:defaultValue="14"
	        android:persistent="true"
			sciman:minValue="6"
			sciman:maxValue="40"
	        android:text=" px"/>
		 <de.badgersburrow.sciman.SlidebarPreference
		    android:id="@+id/prefHeaderTextSize"
	        android:key="prefHeaderTextSize"
	        android:title="@string/pref_headertextsize"
	        android:summary="@string/pref_headertextsize_sum"
	        android:dialogMessage="@string/pref_headertextsize_sum"
	        android:defaultValue="2"
	        android:persistent="true"
			sciman:minValue="0"
			sciman:maxValue="10"
	        android:text=" px"/>
		<CheckBoxPreference
            android:id="@+id/isCheckerEnabled"
            android:key="isCheckerEnabled"
            android:title="@string/pref_highrows"
            android:summary="@string/pref_highrows_sum"
            android:defaultValue="true"/>
		<de.badgersburrow.sciman.SlidebarPreference
		    android:id="@+id/prefBibwidth"
	        android:key="prefBibwidth"
	        android:title="@string/pref_bibwidth"
	        android:summary="@string/pref_bibwidth_sum"
	        android:dialogMessage="@string/pref_bibwidth_sum"
	        android:defaultValue="130"
	        android:persistent="true"
			sciman:minValue="100"
			sciman:maxValue="250"
	        android:text=" %"/>
		<CheckBoxPreference
            android:id="@+id/isSorttimestampEnabled"
            android:key="isSorttimestampEnabled"
            android:title="@string/pref_sorttimestamp"
            android:summary="@string/pref_sorttimestamp_sum"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:id="@+id/isSavesortsearchEnabled"
            android:key="isSavesortsearchEnabled"
            android:title="@string/pref_sortsearch"
            android:summary="@string/pref_sortsearch_sum"
            android:defaultValue="false"/>
        </PreferenceCategory>
        <PreferenceCategory
        android:key="catDetailview"
        android:title="@string/pref_detailview">
		<CheckBoxPreference
            android:id="@+id/isViewpdffileEnabled"
            android:key="isViewpdffileEnabled"
            android:title="@string/pref_pdffile"
            android:summary="@string/pref_pdffile_sum"
            android:defaultValue="false"/>
		<CheckBoxPreference
            android:id="@+id/isViewdoilinkEnabled"
            android:key="isViewdoilinkEnabled"
            android:title="@string/pref_doilink"
            android:summary="@string/pref_doilink_sum"
            android:defaultValue="false"/>
    </PreferenceCategory>
        </PreferenceScreen>        
        <PreferenceScreen android:key="prefscreen_conf"
            android:title="@string/pref_screen_conf"
            android:summary="@string/pref_screen_conf_sum">
            
        </PreferenceScreen>
        <PreferenceScreen android:key="prefscreen_my"
            android:title="@string/pref_screen_my"
            android:summary="@string/pref_screen_my_sum">
                
        </PreferenceScreen>
    </PreferenceCategory>
    
   
    
    
    
    
</PreferenceScreen>