<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 <RelativeLayout 
     android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/dv_linearlayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_margin="15dp"
    android:background="@drawable/panel_background"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp" >

    <RelativeLayout
        android:id="@+id/dv_llauthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_author_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dv_author"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_lltitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dv_title"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_llyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_year_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dv_year"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_lljournal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_journal_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dv_journal"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_llabstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_abstract_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dv_abstract"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_llbibtexkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_bibtexkey_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dv_bibtexkey"
            android:textColor="@color/grey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_lldoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dv_llfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/dv_llbuttons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="1" >
    </LinearLayout>



</LinearLayout>

</RelativeLayout>

 
</ScrollView>